# Dz_Urfu_Yatp_and_Scripts

./: CMakeLists.txt  README.md
01.03.23/: Line.cpp  a.out  header.h  main.cpp
02.11.22/: 1  1.cpp  2  2.cpp  3  3.cpp  bas  bas.cpp
05.04.23/: Words.cpp  a.out  answer.txt  headers.h  main.cpp  text.txt
05.10.22/: age.cpp  clocks.cpp  date  date.cpp  kozel.cpp  point  point.cpp  rectangles  rectangles.cpp
06.04.23/: Polynom.cpp  a.out  header.h  main.cpp
07.12.22/: 1  1.cpp  2  2.cpp  3  3.cpp  4  4.cpp
10.03.23/: Train.cpp  a.out  answer.txt  header.h  main.cpp  train.txt
11.11.22/: osi.bat  ss
12.04.23/: a.out  header.h  main.cpp  subsets.txt
12.10.22/: brothers_numbers  brothers_numbers.cpp  dirac  dirac.cpp  friendly_numbers  friendly_numbers.cpp  point_square  point_square.cpp
14.12.22/: 1  1.cpp  2  2.cpp  file1.txt  reserved_words.txt  text.txt
15.02.23/: 1  1.cpp  input.txt
15.03.23/: Abonents.cpp  a.out  abonents.txt  answer.txt  header.h  main.cpp
15.04.23/: Words.cpp  a.out  answer.txt  headers1.h  main.cpp  text.txt
16.11.22/: 1  1.cpp  2  2.cpp  3  3.cpp  chakmati  chakmati.cpp
19.04.23/: a.out  headers.h  main.cpp
19.10.22/: fibo_num  fibo_num.cpp  is_palindrom  is_palindrom.cpp  max_n  max_n.cpp  num_armstrong  num_armstrong.cpp  num_div_digit  num_div_digit.cpp
21.02.23/: a.out  divideMnogochl.cpp  getCoefProizv.cpp  getProizvInPoint.cpp  getValueInPoint.cpp  headers.h  input.cpp  main.cpp  minusMnogochl.cpp  multiplyMnogochl.cpp  output.cpp  sumMnogochl.cpp
21.03.23/: Mnogoug.cpp  a.out  answer.txt  header.h  main.cpp  (+1 more)
(+114 files in other folders)
