cmake_minimum_required(VERSION 3.23)
project(Homework)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Homework
        02.11.22/1.cpp
        02.11.22/2.cpp
        02.11.22/3.cpp
        02.11.22/bas.cpp
        05.10.22/age.cpp
        05.10.22/clocks.cpp
        05.10.22/date.cpp
        05.10.22/kozel.cpp
        05.10.22/point.cpp
        05.10.22/rectangles.cpp
        07.12.22/1.cpp
        07.12.22/2.cpp
        07.12.22/3.cpp
        07.12.22/4.cpp
        12.10.22/brothers_numbers.cpp
        12.10.22/dirac.cpp
        12.10.22/friendly_numbers.cpp
        12.10.22/point_square.cpp
        14.12.22/1.cpp
        14.12.22/2.cpp
        15.02.23/1.cpp
        16.11.22/1.cpp
        16.11.22/2.cpp
        16.11.22/3.cpp
        16.11.22/chakmati.cpp
        19.10.22/fibo_num.cpp
        19.10.22/is_palindrom.cpp
        19.10.22/max_n.cpp
        19.10.22/num_armstrong.cpp
        19.10.22/num_div_digit.cpp
        23.11.22/1.cpp
        23.11.22/2.cpp
        23.11.22/3.cpp
        23.11.22/4.cpp
        26.10.22/1.cpp
        26.10.22/2.cpp
        26.10.22/3.cpp
        29.11.22/1.cpp
        29.11.22/z1.cpp
        29.11.22/z2.cpp
        29.11.22/z3.cpp
        9.11.22/1.cpp
        9.11.22/2.cpp
        YATP_utils/searchAlg/main.cpp
        YATP_utils/sortAlg/main.cpp
        YATP_utils/sorting_alg.cpp)
